--- a/docs/input-test/style.css
+++ b/docs/input-test/style.css
@@ -8,7 +8,6 @@ body {
 
   display: flex;
   flex-direction: column;
-  justify-content: center;
   justify-items: center;
   align-items: center;
   align-content: center;
